fixed stupid buffer overflow

--- a/src-cli/CMakeLists.txt
+++ b/src-cli/CMakeLists.txt
@@ -18,8 +18,16 @@ ENDIF ()
 
 LIST (SORT CLISRC)
 
-ADD_EXECUTABLE (server ${CLISRC} $<TARGET_OBJECTS:darknetobjlib>)
+ADD_EXECUTABLE (server ${CLISRC} 
+					#$<TARGET_OBJECTS:darknetobjlib>
+				)
 SET_TARGET_PROPERTIES (server PROPERTIES OUTPUT_NAME "darknet_server")
+
+# NOTE: Set ASAN_OPTIONS=protect_shadow_gap=0 before running
+# 	e.g.	$ ASAN_OPTIONS=protect_shadow_gap=0 darknet_server ...
+target_compile_options(server PRIVATE -fsanitize=address)
+target_link_options(server PRIVATE -fsanitize=address)
+
 IF (DARKNET_USE_CUDA)
 	SET_TARGET_PROPERTIES (server PROPERTIES CUDA_ARCHITECTURES "${DARKNET_CUDA_ARCHITECTURES}")
 	SET_TARGET_PROPERTIES (server PROPERTIES CUDA_SEPARABLE_COMPILATION OFF)
@@ -31,7 +39,8 @@ add_subdirectory(uSockets)
 target_include_directories(server PRIVATE uSockets/src)
 
 #
-TARGET_LINK_LIBRARIES (server PRIVATE ${DARKNET_LINK_LIBS} usocketslib)
+TARGET_LINK_LIBRARIES (server PRIVATE darknet ${DARKNET_LINK_LIBS} usocketslib)
+
 
 
 IF (UNIX)
